Added PPD_TOO_LARGE to ppd_provider.h CallBackResultCode.

Using this new enum code the correct error will be displayed to the user
when then try to manually add a PPD which is too large. Before the
reported error was that the PPD was unable to be retrieved by the
server.

R=skau@chromium.org

Bug: 766767,765481
Change-Id: I281d92f89c7baff5ce5530924d06c76ea1480791